src/test/deca/context/invalid/class1.deca
class A1{}



{    
A2 b=new A2();    
}